# transformer-embeddings

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality.yml  sast-workflows.yml  security-alert-summary.js  security-alert-summary.yml  streamline-approval-workflow.yml  test-release.yml
src/transformer_embeddings/: __init__.py  helpers.py  model.py  poolers.py
tests/: __init__.py  test_model.py  test_placeholder.py  test_poolers.py
