[tool.poetry]
name = "transformer-embeddings"
version = "4.0.1"
description = "Transformer Embeddings"
authors = ["Headspace Health <transformer-embeddings@headspace.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ginger-io/transformer-embeddings"
repository = "https://github.com/ginger-io/transformer-embeddings"
documentation = "https://github.com/ginger-io/transformer-embeddings"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/ginger-io/transformer-embeddings/releases"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
transformers = "^4.23.1"
torch = "^1.9.1"
s3fs = { version = "^2023.1.0", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-repeat = "^0.9.1"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.release.dependencies]
python-semantic-release = "^7.32.1"

[tool.poetry.extras]
s3 = ["s3fs"]

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_source = "tag"  # Resolution for https://github.com/relekang/python-semantic-release/issues/460#issuecomment-1192261285
commit_version_number = true
version_variable = "src/transformer_embeddings/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
branch = "main"
patch_without_tag = true  # Create a patch release on every commit merged to `main`.
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
tag_format = "v{version}"
commit_subject = "chore(release): v{version}"
changelog_sections = "feature,fix,breaking,documentation,performance,refactor,test"
